crates/wdl-analysis/tests/validation/hints-duplicate-keys/source.errors
error: duplicate key `memory` in hints section
   ┌─ tests/validation/hints-duplicate-keys/source.wdl:12:9
   │
11 │         memory: "first"
   │         ------ first key with this name is here
12 │         memory: "dup"
   │         ^^^^^^ this key is a duplicate

error: duplicate key `container` in hints section
   ┌─ tests/validation/hints-duplicate-keys/source.wdl:13:9
   │
 9 │         container: "first"
   │         --------- first key with this name is here
   ·
13 │         container: "dup"
   │         ^^^^^^^^^ this key is a duplicate

error: duplicate key `disks` in hints section
   ┌─ tests/validation/hints-duplicate-keys/source.wdl:14:9
   │
10 │         disks: "first"
   │         ----- first key with this name is here
   ·
14 │         disks: "dup"
   │         ^^^^^ this key is a duplicate

